[package]
authors = ["Parity Technologies <admin@parity.io>"]
name = "cumulus-relay-chain-interface"
version = "0.1.0"
edition = "2021"

[dependencies]
polkadot-overseer = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.34" }
polkadot-service = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.34" }

cumulus-primitives-core = { path = "../../primitives/core" }

sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sp-state-machine = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }

futures = "0.3.25"
async-trait = "0.1.63"
thiserror = "1.0.38"
jsonrpsee-core = "0.15.1"
parity-scale-codec = "3.2.2"
